# opensyber-mcp-watch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability.md
.github/workflows/: ci.yml  publish.yml
demo/: SCRIPT.md  drift-catch.tape  rugpull-server.mjs  run.sh
docs/: LAUNCH.md  ci-and-alerts.md  cloud-architecture.md  detection.md  enforcement.md
python/: README.md  pyproject.toml
python/src/opensyber_mcp_watch/: __init__.py  cli.py
scripts/: publish-standalone.sh  release.sh
src/: alert.ts  cli.ts  config.ts  differ.ts  index.ts  mcp-client.ts  storage.ts  watcher.ts
src/commands/: diff.ts  history.ts  watch.ts
tests/: fingerprint.test.ts  storage.test.ts
